test/com/facebook/buck/jvm/java/testdata/parse_errors/BUCK.fixture
java_library(
    name = "errors",
    srcs = glob(["*.java"]),
)
